TGUI 0.8.4  (TBD)
-----------------

- Added EscapeKeyPressed signal to ChildWindow
- ExpandDirection of ComboBox can now be set to Automatic
- Added min and max functions to layouts again
- Added horizontal grid lines to ListView
- Added option to ListView to expand the last column to fill the remaining space
- Allow a separator between the header and contents in a ListView
- Split separator in ListView into separator and vertical grid line
- Fixed corrupted white theme when DefaultTheme was initialized before Color constants


TGUI 0.8.3  (27 January 2019)
-----------------------------

- ListView widget added
- EditBox can now have a suffix
- TextBox can now have a horizontal scrollbar
- Label can now have a vertical scrollbar
- Default scrollbar width wasn't always taken from texture size in widgets containing scrollbars
- Scrollbar wasn't drawn correctly when Maximum equaled ViewportSize with AutoHide disabled
- Default icons in TreeView didn't change color when item was selected
- Rounded icon position in TreeView to avoid bad icon alignment
- TreeView didn't handle opacity and font changes
- Sprites didn't keep their transparency when resized
- Texture filenames can now contain UTF8 characters on linux
- Added propery to widget renderer to set an opacity for the disabled state
- Fixed some bugs in saving and loading widget files (#90)


TGUI 0.8.2  (16 December 2018)
------------------------------

- TreeView widget added
- Text styles of lines in ChatBox can now be changed
- Clipping was broken when using multiple windows
- ScrollbablePanel didn't fully scroll to the right with both scrollbars visible


TGUI 0.8.1  (15 October 2018)
-----------------------------

- Submenus are now supported in MenuBar
- Menus can now be disabled in MenuBar and given a different text color
- You can now connect a signal handler to a single menu item in MenuBar
- ChildWindow position can be locked to disable dragging it